# pkl-python

./: .gitignore  README.md  pyproject.toml
pkl_python/evaluator/: decoder.py  evaluator.py  evaluator_exec.py  evaluator_manager.py  evaluator_options.py  module_source.py  preconfigured_options.py  project.py  reader.py
pkl_python/types/: base_model.py  codes.py  evaluator.py  evaluator_manager.py  incoming.py  outgoing.py  pkl.py  project.py
tests/: main.py  test.pkl  test_evaluator.py  test_evaluator_manager.py
