[project]
name = "pkl-python"
version = "0.1.0"
description = "Pkl bindings for Python"
authors = [
    { name = "Adi Mukherjee", email = "hi@adim.in" }
]
dependencies = [
    "pydantic>=2.6.3",
    "msgpack>=1.0.8",
    "pytest>=8.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pkl_python"]
